styles/h5p-tooltip.css
.h5p-tooltip {
  display: none;
  position: absolute;

  z-index: 110;

  font-size: 0.88rem;
  text-align: left;

  padding: 0.38rem 0.63rem;
  margin-left: 4px;
  white-space: normal;
  word-break: break-word;
  width: max-content;
  max-width: min(300px, 90%);
  border-radius: 4px;

  background: #414141;
  color: #FFF;

  cursor: default;
}

.h5p-tooltip-narrow {
  max-width: min(300px, 70%);
}

.h5p-tooltip-visible {
  display: block;
}

.h5p-iframe:has(.h5p-theme) .h5p-tooltip  {
  background-color: var(--h5p-theme-text-secondary);
  color: var(--h5p-theme-ui-base);
  font-size: var(--h5p-theme-font-size-m);
  max-width: min(400px, 90%);
  border-radius: var(--h5p-theme-border-radius-medium);
}

